[package]
name = "bonding-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
actix-web-actors = "4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
influxdb = { version = "*", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.28", features = ["full"] }
actix = "0.13"
solana-sdk = "2.0.7"
