[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
lapin = "2.1"
influxdb = { version = "0.5", features = ["derive"] }
yellowstone-grpc-client = {git="https://github.com/rpcpool/yellowstone-grpc", tag="v1.15.2+solana.1.18.22"}# 1.16.0+solana.2.0.5
yellowstone-grpc-proto = {git="https://github.com/rpcpool/yellowstone-grpc", tag="v1.15.2+solana.1.18.22"}
chrono = "*"
bs58 = "*"
tonic = { workspace = "true", features = ["tls"] }
anyhow = "1.0.86"
futures = "0.3.30"
hex = "0.4.3"
solana-program = "1.18.22"
solana-sdk = "1.18.22"
solana-zk-token-sdk = "1.18.22"